--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rancher/shell": "^3.0.0",
     "@types/lodash": "4.14.184",
     "css-loader": "6.7.3",
+    "focus-trap": "^7.6.4",
     "raw-loader": "^4.0.2"
   },
   "devDependencies": {
@@ -26,12 +27,15 @@
     "eslint-plugin-local-rules": "link:./eslint-plugin-local-rules",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-vue": "9.10.0"
+    "eslint-plugin-vue": "9.10.0",
+    "node-polyfill-webpack-plugin": "^3.0.0"
   },
   "resolutions": {
+    "**/webpack": "5",
     "@types/node": "~20.10.0",
     "glob": "7.2.3",
-    "@types/lodash": "4.17.5"
+    "@types/lodash": "4.17.5",
+    "html-webpack-plugin": "^5.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=dev ./node_modules/.bin/vue-cli-service serve",
