--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   },
   "dependencies": {
     "@rancher/components": "^0.3.0-alpha.1",
-    "@rancher/shell": "^3.0.0",
+    "@rancher/shell": "^3.0.2-rc.3",
     "@types/lodash": "4.14.184",
     "css-loader": "6.7.3",
-    "focus-trap": "^7.6.4",
-    "raw-loader": "^4.0.2"
+    "focus-trap": "7.6.4"
   },
   "devDependencies": {
     "@types/jest": "29.5.12",
@@ -28,7 +27,10 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-vue": "9.10.0",
-    "node-polyfill-webpack-plugin": "^3.0.0"
+    "file-loader": "6.2.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "raw-loader": "4.0.2",
+    "url-loader": "4.1.1"
   },
   "resolutions": {
     "**/webpack": "5",
