--- a/pkg/k3k/package.json
+++ b/pkg/k3k/package.json
@@ -6,8 +6,7 @@
   "rancher": {
     "annotations": {
       "catalog.cattle.io/display-name": "Virtual Clusters",
-      "catalog.cattle.io/rancher-version": ">= 2.10.0",
-      "catalog.cattle.io/ui-extensions-version": ">= 3.0.0"
+      "catalog.cattle.io/ui-extensions-version": ">= 3.0.2-rc.4"
     }
   },
   "scripts": {},
