rename pkg from k3k to virtual-clusters

--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "k3k",
+  "name": "virtual-clusters",
   "description": "Virtual cluster provisioning using K3K",
   "version": "0.1.0",
   "private": false,
