update build-extension-charts to also run on prerelease

--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -3,7 +3,7 @@ name: Build and Release Extension Charts
 on:
   workflow_dispatch:
   release:  
-    types: [released]
+    types: [prereleased, released]
 
 defaults:
   run:
