--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "virtual-cluster-extension",
-  "version": "0.1.0",
+  "name": "virtual-clusters",
+  "version": "0.1.0-rc1",
   "private": false,
   "engines": {
     "node": ">=20.0.0"
