--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rancher/components": "^0.3.0-alpha.1",
     "@rancher/shell": "3.0.4",
     "@types/lodash": "4.14.184",
+    "chart.js": "^4.5.0",
     "css-loader": "6.7.3",
     "focus-trap": "7.6.4"
   },
