--- a/pkg/virtual-clusters/resources/import-configmap.json
+++ b/pkg/virtual-clusters/resources/import-configmap.json
@@ -2,7 +2,7 @@
     "apiVersion": "v1",
     "kind": "ConfigMap",
     "metadata": {
-      "namespace": "k3k-K3K_NAME",
+      "namespace": "",
       "name": "import-K3K_NAME"
     },
     "data": {
