--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -7,7 +7,8 @@
     "annotations": {
       "catalog.cattle.io/display-name": "Virtual Clusters",
       "catalog.cattle.io/ui-extensions-version": ">= 3.0.2-rc.5",
-      "catalog.cattle.io/experimental": "true"
+      "catalog.cattle.io/experimental": "true",
+      "catalog.cattle.io/rancher-version": ">=2.12.0"
     }
   },
   "icon": "https://raw.githubusercontent.com/rancher/virtual-clusters-ui/refs/heads/main/pkg/virtual-clusters/assets/icon-virtual-clusters.svg",
