--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virtual-clusters",
   "description": "Virtual cluster provisioning using K3K",
-  "version": "1.0.0-alpha1",
+  "version": "0.1.3",
   "private": false,
   "rancher": {
     "annotations": {
