--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -6,11 +6,12 @@
   "rancher": {
     "annotations": {
       "catalog.cattle.io/display-name": "Virtual Clusters",
-      "catalog.cattle.io/ui-extensions-version": ">= 3.0.2-rc.5",
-      "catalog.cattle.io/experimental": "true"
+      "catalog.cattle.io/ui-extensions-version": ">= 3.0.5-rc.6",
+      "catalog.cattle.io/experimental": "true",
+      "catalog.cattle.io/rancher-version": ">=2.12.0"
     }
   },
-  "icon": "https://raw.githubusercontent.com/rancher/virtual-clusters-ui/refs/heads/main/pkg/virtual-clusters/assets/icon-virtual-clusters.svg",
+  "icon": "https://raw.githubusercontent.com/rancher/virtual-clusters-ui/refs/heads/main/pkg/virtual-clusters/assets/icon-k3k.svg",
   "scripts": {},
   "engines": {
     "node": ">=16"
