--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@babel/plugin-transform-class-static-block": "7.28.3",
     "@rancher/components": "^0.3.0-alpha.1",
-    "@rancher/shell": "3.0.6",
+    "@rancher/shell": "3.0.5-rc.6",
     "@types/lodash": "4.14.196",
     "cache-loader": "4.1.0",
     "core-js": "3.21.1",
