--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -1,13 +1,12 @@
 {
   "name": "virtual-clusters",
-  "description": "Virtual cluster provisioning using K3K",
+  "description": "Virtual cluster provisioning using K3K (Prime only)",
   "version": "1.0.0-rc1",
   "private": false,
   "rancher": {
     "annotations": {
       "catalog.cattle.io/display-name": "Virtual Clusters",
       "catalog.cattle.io/ui-extensions-version": ">= 3.0.5-rc.6",
-      "catalog.cattle.io/experimental": "true",
       "catalog.cattle.io/rancher-version": ">=2.12.0"
     }
   },
