--- a/pkg/virtual-clusters/package.json
+++ b/pkg/virtual-clusters/package.json
@@ -7,7 +7,8 @@
     "annotations": {
       "catalog.cattle.io/display-name": "Virtual Clusters",
       "catalog.cattle.io/ui-extensions-version": ">= 3.0.5-rc.6",
-      "catalog.cattle.io/rancher-version": ">=2.12.0"
+      "catalog.cattle.io/rancher-version": ">=2.12.0",
+      "catalog.cattle.io/prime-only": "true"
     }
   },
   "icon": "https://raw.githubusercontent.com/rancher/virtual-clusters-ui/refs/heads/main/pkg/virtual-clusters/assets/icon-k3k.svg",
