do not skip test

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -12,5 +12,5 @@ defaults:
 jobs:
   build-extension-charts:
     uses: rancher/dashboard/.github/workflows/build-extensions-test.yaml@reusab-workflow-test
-    with:
-      disable_exts_build: virtual-clusters-2
+    # with:
+    #   disable_exts_build: virtual-clusters-2
