add a bad pkg to the list of pkgs to disable

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -13,4 +13,4 @@ jobs:
   build-extension-charts:
     uses: rancher/dashboard/.github/workflows/extensions-build-test.yaml@reusab-workflow-test
     with:
-       disable_exts_build: virtual-clusters-2,virtual-clusters
+       disable_exts_build: virtual-clusters-2,virtual-clusters,babdabadbadbadbad
