--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virtual-clusters",
-  "version": "1.0.0",
+  "version": "1.0.1-rc1",
   "private": false,
   "engines": {
     "node": ">=20.0.0"
